--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+ul {
+    list-style: none;
+}
+
 a {
     text-decoration: none;
 }
@@ -19,9 +23,16 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex: 0 0 auto;
 
     background-color: black;
 
+}
+
+.main-container {
+    /* width: calc(100% - 30px); */
+    flex: 1 1 auto;
+    padding-top: 50px;
 }
 
 .premium {
@@ -33,7 +44,7 @@ a {
     height: 50px;
 
     background-color: rgba(0, 0, 0, 0.6);
-    
+
     z-index: 99;
 }
 
@@ -50,4 +61,27 @@ a {
     font-size: 8px;
     padding: .8em 2.5em;
     color: white;
+}
+
+nav {
+
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+
+}
+
+nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+nav li {
+    padding: 10px 5px;
+    font-size: 8px;
+}
+
+nav a {
+    color: #6c6f74;
 }
