--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@ a {
     display: flex;
 }
 
+/* SIDE BAR  */
+
 .side-bar {
     width: 30px;
     height: 90vh;
@@ -23,17 +25,23 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex: 0 0 auto;
+    flex: 1 0 auto;
 
     background-color: black;
 
 }
 
+/* ---------- */
+
 .main-container {
-    /* width: calc(100% - 30px); */
+    height: 90vh;
     flex: 1 1 auto;
     padding-top: 50px;
+    background-color: #141922;
+    overflow-y: auto;
 }
+
+/* SEZIONE PREMIUM  */
 
 .premium {
     position: fixed;
@@ -63,6 +71,8 @@ a {
     color: white;
 }
 
+/* SEZIONE NAV */
+
 nav {
 
     display: flex;
@@ -84,4 +94,51 @@ nav li {
 
 nav a {
     color: #6c6f74;
+}
+
+/* SEZIONE MAIN  */
+
+main {
+    padding: 0 10px;
+}
+
+main h1 {
+    padding: 10px 0;
+    font-size: 16px;
+
+    color: white;
+}
+
+main ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+main li{
+    margin-right: 5px;
+    min-width: 80px;
+    flex: 1 1 calc(  (100% - 20px)  / 2 - 5px );
+    text-align: center;
+}
+
+
+main img {
+    width: 100%;
+    padding: 5px 0;
+}
+
+main h2 {
+    padding: 5px 0;
+    font-size: 12px;
+
+    color: white;
+}
+
+main p {
+    font-size: 7px;
+    color: #6c6f74;
+}
+
+.popular img {
+    border-radius: 50%;
 }
