--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+    font-family: 'Raleway', sans-serif;
+}
+
 ul {
     list-style: none;
 }
@@ -16,6 +20,8 @@ a {
     display: flex;
 }
 
+
+
 /* SIDE BAR  */
 
 .side-bar {
@@ -25,11 +31,49 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    
     flex: 1 0 auto;
 
     background-color: black;
 
 }
+
+.side-bar li {
+    padding: 5px 0;
+}
+
+.side-bar img {
+    width: 30px;
+    vertical-align: middle;
+}
+
+.side-bar h1,h2,a {
+    color: white;
+}
+
+.logo h1 {
+    font-size: 24px;
+}
+
+.playlist {
+    height: 300px;
+    overflow-y: auto;
+}
+
+.playlist h2 {
+    font-size: 16px;
+}
+
+.btn-plus{
+    vertical-align: middle;
+    font-size: 30px;
+    color: #a3a3a3;
+}
+
+.playlist a {
+    color: #6d6d6d;
+}
+
 
 /* ---------- */
 
@@ -117,7 +161,7 @@ main ul {
 main li{
     margin-right: 5px;
     min-width: 80px;
-    flex: 1 1 calc(  (100% - 20px)  / 2 - 5px );
+    flex: 0 1 calc(  (100% - 20px)  / 2 - 5px );
     text-align: center;
 }
 
@@ -152,25 +196,23 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 5px;
+    
 
     background-color: #282828;
     
 }
 
-footer > ul {
+footer > div {
     flex: 0 1 calc(100% / 3 );
 }
 
+/* SINISTRA */
+
 .footer-left {
     display: flex;
-    align-items: center;
-    align-content: center;
-    /* margin: 20px 0; */
-
 }
 
-.footer-left li {
+.footer-left div {
 
     padding-right: 5px;
 }
@@ -195,51 +237,44 @@ footer p {
     justify-content: center;
 }
 
-.left-icons a{
-    flex: 0 0 12.5px;
-}
-
-.footer-left i {
-    /* font-size: 10px; */
+.left-icons a {
     color: #6c6f74;
 }
+
+/* CENTRO */
 
 .footer-center {
     display: flex;
     flex-direction: column;
+    align-items: center;
+
+}
+
+.footer-center-up {
+    width: 160px;
     
-    /* margin-top: 10px; */
+    text-align: center;
+}
+
+.footer-center-up > * {
+    padding: 0 5px;
 }
 
 button {
     border: none;
     background-color: inherit;
     color: white;
+    cursor: pointer;
 }
 
-.footer-center ul {
+.footer-center-down {
     display: flex;
     justify-content: space-between;
-    
+    align-self: stretch;
 }
 
-.footer-center-up {
-    width: 180px;
-    margin: 0 auto;
-    
-}
 
-.footer-center > li:first-child {
-    max-width: 180px;
-    flex: 0 0 auto;
-}
-
-.footer-center .fa-play-circle {
-    /* font-size: 20px; */
-}
-
-.footer-center .time {
-    /* font-size: 7px; */
+.timer {
     color: white;
 }
 
@@ -266,6 +301,50 @@ button {
     justify-content: flex-end;
 }
 
-.footer-right .progress-bar {
-    max-width: 80px;
+.footer-right * {
+
+    padding-right: 5px;
+}
+
+.volume {
+    width: 60px;
+    display: flex;
+    align-items: center;
+    flex: 0 0 auto;
+    vertical-align: middle;
+}
+
+.hidden {
+    display: none;
+}
+
+@media screen and (min-width:500px){
+    .hidden {
+        display: initial;
+    }
+    .side-bar {
+        width: 210px;
+        padding: 0 20px;
+    }
+    .logo {
+        padding: 5px 0;
+    }
+
+    .logo img {
+        width: 35px;
+    }
+
+    .premium {
+        width: calc(100% - 210px);
+    }
+
+    main li {
+        flex: 0 1 calc(  (100% - 20px)  / 4 - 5px );
+    }
+}
+
+@media screen and (min-width:1280px) {
+    main li {
+        flex: 0 1 calc(  (100% - 20px)  / 6 - 5px );
+    }
 }
