--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,17 @@ html {
 }
 
 ul {
+    display: inline-block;
     list-style: none;
 }
 
 a {
     text-decoration: none;
+    color:#6d6d6d;
+}
+
+a:hover {
+    color: white;
 }
 
 .flex-container{
@@ -25,12 +31,13 @@ a {
 /* SIDE BAR  */
 
 .side-bar {
-    width: 30px;
+    width: 40px;
     height: calc(100vh - 80px);
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     
     flex: 1 0 auto;
 
@@ -38,25 +45,57 @@ a {
 
 }
 
+.upper-list {
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+}
+
+.upper-list li {
+    min-height: 0;
+}
+
+
+
+
 .side-bar li {
-    padding: 5px 0;
+    margin-bottom: 16px;
 }
 
 .side-bar img {
     width: 30px;
+    margin: 8px 0;
+
+    vertical-align: middle;
+
+}
+
+.side-bar h1,h2 {
+    color: white;
     vertical-align: middle;
 }
 
-.side-bar h1,h2,a {
-    color: white;
+.logo {
+    margin-top: 5px;
 }
 
 .logo h1 {
-    font-size: 24px;
+    font-size: 30px;
+}
+
+.home {
+    border-left: 2px solid lime;
+}
+
+.home a {
+    color: white;
 }
 
 .playlist {
-    height: 300px;
+    display: inline-block;
+    min-height: 0;
+    max-height: 500px;
+    margin-right: -30px;
     overflow-y: auto;
 }
 
@@ -70,8 +109,29 @@ a {
     color: #a3a3a3;
 }
 
-.playlist a {
-    color: #6d6d6d;
+.btn-container:hover .btn-plus {
+    color: white;
+}
+
+.profile-bg {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+
+    border-radius: 50%;
+    background-color: #808080;
+    overflow: hidden;
+
+    vertical-align: middle;
+}
+
+.profile-bg img {
+    width: 30px;
+    height: 30px;
+    margin: 0;
+
+    object-fit: contain;
+    object-position: center;
 }
 
 
@@ -80,7 +140,7 @@ a {
 .main-container {
     height: calc(100vh - 80px);
     flex: 1 1 auto;
-    padding-top: 50px;
+    padding-top: 70px;
     background-color: #141922;
     overflow-y: auto;
 }
@@ -88,16 +148,16 @@ a {
 /* SEZIONE PREMIUM  */
 
 .premium {
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
 
-    width: calc(100% - 30px);
-    height: 50px;
+    width: calc(100% - 40px);
+    height: 70px;
 
     background-color: rgba(0, 0, 0, 0.6);
 
-    z-index: 99;
+    /* z-index: 99; */
 }
 
 .btn {
@@ -105,14 +165,20 @@ a {
     top: 50%;
     right: 0;
     transform: translatey(-50%);
-    margin-right: 10px;
+    margin-right: 30px;
 
     border: 1px solid white;
     border-radius: 1.5em;
 
-    font-size: 8px;
+    font-size: 12px;
     padding: .8em 2.5em;
     color: white;
+}
+
+.btn:hover {
+    top: 25%;
+    transition: 0.3s;
+    transform: scale(1.3);
 }
 
 /* SEZIONE NAV */
@@ -133,11 +199,18 @@ nav ul {
 
 nav li {
     padding: 10px 5px;
-    font-size: 8px;
+    font-size: 14px;
 }
 
 nav a {
     color: #6c6f74;
+}
+
+.highlight-line {
+    margin: 3px auto;
+    width: 40px;
+    height: 2px;
+    background-color: lime;
 }
 
 /* SEZIONE MAIN  */
@@ -146,9 +219,13 @@ main {
     padding: 0 10px;
 }
 
+section {
+    padding-top: 30px;
+}
+
 main h1 {
     padding: 10px 0;
-    font-size: 16px;
+    font-size: 24px;
 
     color: white;
 }
@@ -159,27 +236,52 @@ main ul {
 }
 
 main li{
+    position: relative;
     margin-right: 5px;
-    min-width: 80px;
+    min-width: 110px;
     flex: 0 1 calc(  (100% - 20px)  / 2 - 5px );
     text-align: center;
 }
 
 
 main img {
+    /* position: relative; */
     width: 100%;
     padding: 5px 0;
 }
 
+main a:hover .album {
+    transition: 0.3s;
+    filter: brightness(60%);
+}
+
+.img-container {
+    position: relative;
+}
+
+.img-container i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    font-size: 100px;
+}
+
+main a:hover .fa-play-circle {
+    /* transition: 0.3s; */
+    z-index: 2;
+}
+
 main h2 {
     padding: 5px 0;
-    font-size: 12px;
+    font-size: 20px;
 
     color: white;
 }
 
 main p {
-    font-size: 7px;
+    font-size: 12px;
     color: #6c6f74;
 }
 
@@ -190,6 +292,11 @@ main p {
 /* SEZIONE FOOTER */
 
 footer {
+    position: relative;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 3;
     height: 80px;
     padding: 0 5px;
 
@@ -218,27 +325,22 @@ footer > div {
 }
 
 .footer-left img {
-    width: 26px;
+    width: 40px;
 }
 
 footer h2 {
-    font-size: 12px;
+    font-size: 20px;
     color: white;
 }
 
 footer p {
-    font-size: 8px;
-    color: #6c6f74;
+    font-size: 12px;
 }
 
 .footer-left .left-icons {
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-.left-icons a {
-    color: #6c6f74;
 }
 
 /* CENTRO */
@@ -252,8 +354,10 @@ footer p {
 
 .footer-center-up {
     width: 160px;
-    
+    padding-bottom: 10px;
+
     text-align: center;
+
 }
 
 .footer-center-up > * {
@@ -265,6 +369,16 @@ button {
     background-color: inherit;
     color: white;
     cursor: pointer;
+    font-size: 18px;
+}
+
+.player {
+    font-size: 25px;
+}
+
+footer .player:hover {
+    transition: 0.3;
+    transform: scale(1.2);
 }
 
 .footer-center-down {
@@ -276,24 +390,53 @@ button {
 
 .timer {
     color: white;
+    margin: 0 5px;
 }
 
 .progress-bar {
+    position: relative;
     min-width: 100px;
     display: flex;
     align-items: center;
     flex: 1 0 auto;
     vertical-align: middle;
+    cursor: pointer;
+    
 }
 
 .white-span {
     width: 20%;
-    border: 1px solid white;
+    height: 4px;
+    background-color: white;
+    border-radius: 16px;
 }
 
-.grey-span {
+.dot {
+    position: absolute;
+    left: 18%;
+    display: none;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: white;
+
+}
+
+.grey-span {   
     width: 80%;
-    border: 1px solid #5a5a5a;
+    height: 4px;
+    background-color: #5a5a5a;
+    border-radius: 16px;
+}
+
+.progress-bar:hover .white-span, 
+.volume:hover .white-span {
+    background-color: lime;
+}
+
+.progress-bar:hover .dot,
+.volume:hover .dot {
+    display: inline-block;
 }
 
 .footer-right {
@@ -307,18 +450,21 @@ button {
 }
 
 .volume {
-    width: 60px;
+    position: relative;
+    min-width: 60px;
     display: flex;
     align-items: center;
     flex: 0 0 auto;
     vertical-align: middle;
+    cursor: pointer;
+    
 }
 
 .hidden {
     display: none;
 }
 
-@media screen and (min-width:500px){
+@media screen and (min-width:600px){
     .hidden {
         display: initial;
     }
@@ -341,10 +487,20 @@ button {
     main li {
         flex: 0 1 calc(  (100% - 20px)  / 4 - 5px );
     }
+
+    .volume {
+        transition: 1s;
+        width: 100px;
+    }
 }
 
 @media screen and (min-width:1280px) {
     main li {
         flex: 0 1 calc(  (100% - 20px)  / 6 - 5px );
+    }
+
+    .volume {
+        transition: 1s;
+        width: 140px;
     }
 }
