--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ a:hover {
 
     background-color: rgba(0, 0, 0, 0.6);
 
-    /* z-index: 99; */
+    z-index: 99;
 }
 
 .btn {
@@ -245,7 +245,6 @@ main li{
 
 
 main img {
-    /* position: relative; */
     width: 100%;
     padding: 5px 0;
 }
@@ -269,7 +268,6 @@ main a:hover .album {
 }
 
 main a:hover .fa-play-circle {
-    /* transition: 0.3s; */
     z-index: 2;
 }
 
